[package]
name = "composable-routing-language"
version = "0.1.0"
authors = ["Alfonso de la Rocha <adlrocha@tutamail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libipld = "0.12.0"
libipld-core = "0.12.0"
anyhow = "1.0.13"
